ignore textwrap fix for flexbox incompatible browsers

--- a/packages/overlayscrollbars/test/playwright/setups/structureSetup/update/index.scss
+++ b/packages/overlayscrollbars/test/playwright/setups/structureSetup/update/index.scss
@@ -133,6 +133,10 @@ body {
   white-space: nowrap;
 }
 
+.fbg .textwrap {
+  display: none !important;
+}
+
 .end::before {
   content: '';
   position: absolute;
